--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
     "name": "node-proxmox",
-    "description": "A simple Proxmox VE NodeJs Module, synchronous",
+    "description": "A simple Proxmox VE NodeJs Module, asynchronous",
     "repository": {
 	    "type": "git",
 	    "url": "https://github.com/maloddon/node-proxmox.git"
 	},
-    "version": "0.1.1",
+    "version": "0.1.2",
     "license": "GPLv2",
+    "main": "node-proxmox.js",
     "keywords": [
 	    "proxmox",
 	    "api",
